# kairos

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  kairos.toml
dev/: OWNER-SETUP.md  dev.toml.example
releases/: README.md
scripts/: READ-ME-GPU.txt  install-windows.ps1  package-windows.ps1
src/: alerts.rs  algo.rs  api.rs  asic.rs  autolykos.rs  cal.rs  config.rs  console.rs  dashboard.html  degrade.rs  devconfig.rs  devfee.rs  devtrack.rs  efficiency.rs  engine.rs  erg.rs  etc.rs  ethash.rs  forecast.rs  gui.rs  hal.rs  hardware.rs  heal.rs  kaspa.rs  ledger.rs  lib.rs  live.rs  main.rs  market_data.rs  model.rs  onboard.rs  pow.rs  runtime.rs  shield.rs  stats.rs  stratum.rs  telemetry.rs  twin.rs  utility.rs
src/gpu/: kairos_kernels.cu  mod.rs
src/intelligence/: energy.rs  mod.rs  pool.rs  stratum.rs  switch.rs  tune.rs
tests/: acceptance.rs
